# NAS-photo-preview

./: .gitignore  CLAUDE.md  Makefile  README.md  photo-cull-app-plan.md
backend/: pyproject.toml
backend/photocull/: __init__.py  cli.py  db.py  exif_utils.py  indexer.py  server.py
backend/tests/: test_server.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BulkActions.tsx  DuelSideBySide.tsx  DuelSliderView.tsx  DuelView.tsx  DuelWinner.tsx  ExportPanel.tsx  FilterBar.tsx  ImportPanel.tsx  Layout.tsx  LoupeView.tsx  MapView.tsx  PhotoCard.tsx  PhotoGrid.tsx  RatingStars.tsx  TimelineView.tsx
frontend/src/hooks/: usePhotos.ts
frontend/src/stores/: photoStore.ts
frontend/src/styles/: globals.css
